@@ -872,7 +872,7 @@ void msGetOutputFormatMimeListGD( mapObj *map, char **mime_list, int max_mime )
 /*                  msGetOutputFormatMimeListRaster()                   */
 /************************************************************************/
 
-void msGetOutputFormatMimeListRaster( mapObj *map, char **mime_list, int max_mime )
+void msGetOutputFormatMimeListWMS( mapObj *map, char **mime_list, int max_mime )
 
 {
     int mime_count = 0, i;
@@ -893,7 +893,8 @@ void msGetOutputFormatMimeListRaster( mapObj *map, char **mime_list, int max_mim
 
         if( j == mime_count && map->outputformatlist[i]->driver &&
             (strncasecmp(map->outputformatlist[i]->driver, "GD/", 3)==0 ||
-             strncasecmp(map->outputformatlist[i]->driver, "GDAL/", 5)==0))
+             strncasecmp(map->outputformatlist[i]->driver, "GDAL/", 5)==0 ||
+             strcasecmp(map->outputformatlist[i]->driver, "svg")==0)) 
             mime_list[mime_count++] = map->outputformatlist[i]->mimetype;
     }
 
